--- a/App_Time_Recorder/app/src/main/res/values/styles.xml
+++ b/App_Time_Recorder/app/src/main/res/values/styles.xml
@@ -18,4 +18,24 @@
     <style name="PackageNameFont" parent="@android:style/TextAppearance.Small">
         <item name="android:textColor">#000000</item>
     </style>
+
+    <!--Custom Edittext theme-->
+    <style name="CustomEditTextStyle" parent="android:Widget.EditText">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/primary_red</item>
+        <!--<item name="android:color"></item>-->
+        <item name="android:backgroundTint">@color/primary_red</item>
+
+
+
+        <!-- ... More items here if needed ... -->
+    </style>
+    <!--<item name="android:drawablePadding">@dimen/normal_padding</item>-->
+
+    <style name="FloatingLabel" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/primary_red</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <!--<item name="android:textSize">16sp</item>-->
 </resources>
